fix intro blinker on mobile

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -113,7 +113,7 @@
       color: $secondaryColor;
       @include Mobile {
         width: 100%;
-        bottom: 24px;
+        bottom: 34px;
       }
     }
     @keyframes arrowBlink {
